--- a/src/style/global.css
+++ b/src/style/global.css
@@ -191,3 +191,28 @@ body {
     color: white;
     cursor: pointer;
 }
+#default-wrapper{
+    background-color: #131415;
+    height: 100vh;
+    color: white;
+}
+.default-text{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.default-text button{
+    background-color: #5769E8;
+    border: 1px solid black;
+    padding: 15px 30px;
+    border-radius: 15px;
+    margin-top: 20px;
+    color: white;
+    cursor: pointer;
+}
+.default-text button:hover{
+    background-color: #fff;
+    color: #131415;
+}
