--- a/src/style/global.css
+++ b/src/style/global.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+:root{
+    
+}
 html,
 body {
   box-sizing: border-box;
@@ -17,7 +20,6 @@ body {
 }
 #content-area {
   flex: 5;
- 
 }
 .content-area-header{
     background: rgb(27, 28, 33);
