--- a/src/style/global.css
+++ b/src/style/global.css
@@ -4,7 +4,7 @@
 }
 :root{
     --site-bg-color: #fff;
-  --site-secondary-bg-color: #000;
+  --site-secondary-bg-color: rgb(27, 28, 33);
   --site-text-color: #212529;
   --site-alt-text-color: #fff;
   --site-link-color: #020617;
@@ -29,209 +29,20 @@ body {
   font-family: "Roboto", "sans-serif";
   color: white;
 }
-.body-wrapper {
-  display: flex;
-}
-#sidebar-wrapper {
-  flex: 1;
-}
-#content-area {
-  flex: 5;
-}
-.content-area-header{
-    background: rgb(27, 28, 33);
-    background: linear-gradient(
-      194deg,
-      rgba(27, 28, 33, 1) 99%,
-      rgba(27, 29, 33, 1) 100%
-    );
+.flex{
     display: flex;
-    justify-content: space-between;
-    padding: 15px 30px;
 }
-.content-area-header .semi-title, .content-area-header p, .content-header-area-one span{
-    color:  #4f525a;
-    font-size: 14px;
-    line-height: 30px;
-    font-weight: 500;
-}
-.content-area-header h2{
-    font-size: 25px;
-    color: white;
-    letter-spacing: 1px;
-    font-weight: 400;
-    line-height: 30px;
-}
-
-.content-header-area-one{
-    display: flex;
-    gap: 20px;
-    align-items: center;  
-    margin-bottom: 10px;
-}
-.content-header-area-one .star-button{
-    padding: 10px;
-    background-color: #1C1E21;
-    border: 1px solid  #4f525a ;
-    border-radius: 10px;
-}
-.create-task{
-    padding: 12px 25px;
-    border-radius: 10px;
-    border: none;
-    background-color: #586aea;
-    color: white;
-    font-size: 18px;
-}
-.divider{
-    height: 30px;
-    color:  #4f525a;
-}
-.content-header-area-two{
-    display: flex;
-    gap: 15px;
-    align-items: center;
-}
-.content-header-area-two .sort-by , .content-header-area-two .filter, .button-group{
-    padding: 8px;
-    display: flex;
-    background-color: #1C1E21;
-    border: 1px solid #4f525a;
-    border-radius: 10px;
-    color: #4f525a;
-    gap: 8px;
-    align-items: center;
-    font-size: 18px;
-
-}
-.sort-by svg{
-    background-color: #41444c;
-    padding: 3px;
-}
-.button-group > button{
-    padding: 3px;
-    display: flex;
-    background-color: #1C1E21;
-    border: none;
-}
-.button-group > button:hover{
-    padding: 3px;
-    display: flex;
-    background-color: #1C1E21;
-    border: none;
-}
-.semi-title h2{
-    display: flex;
-    align-items: center;
-
-}
-.content-area-main-area{
-    background-color: #131415;
-    padding: 30px;
-}
-.category-item{
-    border: 2px dashed #41444c;
-    border-radius: 10px;
-    padding: 10px;   
-}
-.category-header{
-    background-color: #1f2124;
-    padding: 10px 20px;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-}
-.task-item{
-    padding: 20px;
-    border-radius: 10px;
-    margin: 10px 0px;
-    background-color: #1f2124;
-    border: 1px solid #41444c;
-}
-.task-tags{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-}
-.tags{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-.tags span{
-    color: blue;
-    background-color: skyblue;
-    padding: 3px;
-    border-radius: 10px;
-    font-size: 10px;
-}
-
-.task-item h3{
-    font-size: 25px;
-    line-height: 20px;
-    font-weight: 400;
-}
-.task-item p{
-    color: #4f525a;
-    font-size: 16px;
-    line-height: 16px;
-    font-weight: 400;
-    margin: 10px 0px;
-    max-width: 100%;
-}
-.task-item .days-left{
-    background-color: lightgreen;
-    opacity: 0.4;
-    color: greenyellow;
-    padding: 3px;
-    border-radius: 10px;
-    font-size: 10px;
-}
-.content-area-main-area{
-    display: flex;
-    gap: 10px;
-}
-.category-header .add-new{
-    color: #5769E8;
-    background: none;
-    border: none;
-    font-size: 25px;
-    cursor: pointer;
-}
-.edit-task{
-    background: none;
-    border: none;
-    display: flex;
+.justify-center{
     justify-content: center;
+}
+.align-center{
     align-items: center;
-    color: white;
-    cursor: pointer;
 }
-#default-wrapper{
-    background-color: #131415;
-    height: 100vh;
-    color: white;
-}
-.default-text{
-    display: flex;
+.column{
     flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
 }
-.default-text button{
-    background-color: #5769E8;
-    border: 1px solid black;
-    padding: 15px 30px;
-    border-radius: 15px;
-    margin-top: 20px;
-    color: white;
-    cursor: pointer;
+.justify-between{
+    justify-content: space-between;
 }
-.default-text button:hover{
-    background-color: #fff;
-    color: #131415;
-}
+
+
