--- a/src/style/global.css
+++ b/src/style/global.css
@@ -93,3 +93,15 @@ input{
     border-radius: 10px;
 
 }
+
+section.chakra-modal__content{
+
+    position: absolute;
+    width: 40%;
+    top: 40px;
+    left: 30%;
+    background: #fff;
+    border: 1px solid #333;
+    border-radius: 1rem;;
+    padding: 1rem;;
+}
