--- a/src/style/list.css
+++ b/src/style/list.css
@@ -1,11 +1,20 @@
-#list-background{
-    background-color: var(--site-link-color);
-    color: var(--site-bg-color);
-    border: 1px solid var(--site-primary-color);
-    width: 30%;
- }
- 
- .task-item{
-     padding: 1rem 2rem;
-     border: 1px solid var(--site-primary-color);
- }
+.task-item {
+  padding: 1rem 2rem;
+  border: 1px solid var(--site-primary-color);
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 2rem;
+  align-items: center;
+}
+.category-and-label {
+  display: flex;
+  gap: 1rem;
+}
+.category-and-label span {
+  background-color: green;
+  color: #fff;
+  padding: 0.5rem;
+  border-radius: 1rem;
+}
